# django-dbchoices

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
dbchoices/: admin.py  apps.py  fields.py  models.py  registry.py  signals.py  utils.py  validators.py
dbchoices/management/commands/: dbchoices.py
dbchoices/migrations/: 0001_initial.py
dbchoices/rest_framework/: fields.py
dbchoices/templatetags/: dbchoices.py
tests/: base.py  choices.py  conftest.py  models.py  settings.py  test_fields.py  test_models.py  test_registry.py  test_templatetags.py  test_utils.py  test_validators.py
tests/rest_framework/: serializers.py  test_fields.py
