[project]
name = "django-dbchoices"
version = "0.1.0"
description = "A Django package for storing and managing database-backed choices."
readme = "README.md"
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/AvishrantsSh/django-dbchoices"
Repository = "https://github.com/AvishrantsSh/django-dbchoices.git"
Issues = "https://github.com/AvishrantsSh/django-dbchoices/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dbchoices"]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = ["E", "F", "W", "Q", "A", "I", "B", "S", "UP", "SIM", "RUF"]
ignore = ["E501", "RUF012"]