[project]
name = "django-dbchoices"
version = "0.1.0"
description = "A Django package for storing and managing database-backed choices."
authors = [
  { name = "Avishrant Sharma", email = "avishrants@gmail.com"}
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Framework :: Django",
    "Framework :: Django :: 3",
    "Framework :: Django :: 4",
    "Framework :: Django :: 5",
    "Framework :: Django :: 6",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "django",
]

[project.urls]
Homepage = "https://github.com/AvishrantsSh/django-dbchoices"
Repository = "https://github.com/AvishrantsSh/django-dbchoices.git"
Issues = "https://github.com/AvishrantsSh/django-dbchoices/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dbchoices"]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = ["E", "F", "W", "Q", "A", "I", "B", "S", "UP", "SIM", "RUF"]
ignore = ["E501", "RUF012"]

[dependency-groups]
dev = [
    "django>=5.2,<6",
    "djangorestframework>=3.16.1",
]
